force-app/main/default/objects/Decision_Ledger__b/Decision_Ledger__b.object-meta.xml
<CustomObject>
    <description>The record of record. Append-only, hash-chained Big Object. One chain per agent. See CONTRACT.md sec 5.1.</description>
    <label>Decision Ledger</label>
    <pluralLabel>Decision Ledger</pluralLabel>
    <indexes>
        <fullName>Decision_Ledger_Index</fullName>
        <label>Decision Ledger Index</label>
        <fields>
            <name>Chain_Key__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <fields>
            <name>Chain_Position__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <fields>
            <name>Ledger_Key__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
    </indexes>
</CustomObject>