force-app/main/default/objects/Decision_Ledger__b/fields/Agent_Version__c.field-meta.xml
<CustomField>
    <fullName>Agent_Version__c</fullName>
    <label>Agent Version</label>
    <description>Version of the agent that produced this decision.</description>
    <type>Text</type>
    <length>60</length>
</CustomField>