force-app/main/default/objects/Decision_Ledger__b/fields/Approver_Id__c.field-meta.xml
<CustomField>
    <fullName>Approver_Id__c</fullName>
    <label>Approver Id</label>
    <description>Id of the human who approved the decision, when approval was required.</description>
    <type>Text</type>
    <length>18</length>
</CustomField>