force-app/main/default/objects/Decision_Ledger__b/fields/Autonomy_Level__c.field-meta.xml
<CustomField>
    <fullName>Autonomy_Level__c</fullName>
    <label>Autonomy Level</label>
    <description>Whether the agent acted alone, handed off, or was human approved.</description>
    <type>Text</type>
    <length>20</length>
</CustomField>