force-app/main/default/objects/Decision_Ledger__b/fields/Canonical_Body__c.field-meta.xml
<CustomField>
    <fullName>Canonical_Body__c</fullName>
    <label>Canonical Body</label>
    <description>The full key-sorted canonical JSON that was hashed. FLS-restricted. May be redacted while the hash stays in place.</description>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>