force-app/main/default/objects/Decision_Ledger__b/fields/Canonical_Version__c.field-meta.xml
<CustomField>
    <fullName>Canonical_Version__c</fullName>
    <label>Canonical Version</label>
    <description>Version of the canonicalization scheme used to build the hashed payload. The verifier dispatches on this.</description>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>