force-app/main/default/objects/Decision_Ledger__b/fields/Chain_Key__c.field-meta.xml
<CustomField>
    <fullName>Chain_Key__c</fullName>
    <label>Chain Key</label>
    <description>One chain per agent: orgKey:agentApiName. First component of the composite index.</description>
    <type>Text</type>
    <length>60</length>
    <required>true</required>
</CustomField>