force-app/main/default/objects/Decision_Ledger__b/fields/Chain_Position__c.field-meta.xml
<CustomField>
    <fullName>Chain_Position__c</fullName>
    <label>Chain Position</label>
    <description>Monotonic, gap-free position within the chain. Second component of the composite index.</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>