force-app/main/default/objects/Decision_Ledger__b/fields/Consequence_Level__c.field-meta.xml
<CustomField>
    <fullName>Consequence_Level__c</fullName>
    <label>Consequence Level</label>
    <description>Classified consequence of the decision: Low, Medium, or High.</description>
    <type>Text</type>
    <length>20</length>
</CustomField>