force-app/main/default/objects/Decision_Ledger__b/fields/Ledger_Key__c.field-meta.xml
<CustomField>
    <fullName>Ledger_Key__c</fullName>
    <label>Ledger Key</label>
    <description>Uniqueness tiebreak and pointer from Decision_Record__c. Third component of the composite index.</description>
    <type>Text</type>
    <length>35</length>
    <required>true</required>
</CustomField>