force-app/main/default/objects/Decision_Ledger__b/fields/Occurred_At__c.field-meta.xml
<CustomField>
    <fullName>Occurred_At__c</fullName>
    <label>Occurred At</label>
    <description>When the decision was made. Hashed as epoch milliseconds.</description>
    <type>DateTime</type>
</CustomField>