force-app/main/default/objects/Decision_Ledger__b/fields/Prior_Hash__c.field-meta.xml
<CustomField>
    <fullName>Prior_Hash__c</fullName>
    <label>Prior Hash</label>
    <description>This_Hash of the preceding link in the chain. Empty at position 0.</description>
    <type>Text</type>
    <length>128</length>
</CustomField>