force-app/main/default/objects/Decision_Ledger__b/fields/Running_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Running_User_Id__c</fullName>
    <label>Running User Id</label>
    <description>Id of the user under whom the agent ran.</description>
    <type>Text</type>
    <length>18</length>
</CustomField>