force-app/main/default/objects/Decision_Ledger__b/fields/Subject_Reference__c.field-meta.xml
<CustomField>
    <fullName>Subject_Reference__c</fullName>
    <label>Subject Reference</label>
    <description>Reference to the subject of the decision. FLS-restricted to holders of Evidence_View_Subject_Data.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>