force-app/main/default/objects/Decision_Ledger__b/fields/This_Hash__c.field-meta.xml
<CustomField>
    <fullName>This_Hash__c</fullName>
    <label>This Hash</label>
    <description>SHA-256 hex digest of this link's canonical payload.</description>
    <type>Text</type>
    <length>128</length>
</CustomField>